plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.beryx.jlink' version '2.17.7'
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
    testCompile group: 'org.testfx', name: 'testfx-core', version: '4.0.16-alpha'
    testCompile group: 'org.testfx', name: 'testfx-junit5', version: '4.0.16-alpha'
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
    testImplementation group: 'de.saxsys', name: 'jfx-testrunner', version: '1.1'
    testImplementation 'org.mockito:mockito-core:3.+'
}

javafx {
    version = '14'
    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.swing']
}

compileTestJava {
    moduleOptions {
        addModules = ['org.testfx.junit5', 'org.assertj.core']
        addReads = [
                'com.radsoltan' : 'org.testfx.junit5, org.assertj.core'
        ]
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

//     For Fat Jar Creation - Not Compatible with :jlink task - creates error in JavaFX version
gradle.taskGraph.whenReady {
    graph ->
        if (!graph.hasTask(":jlink")) {
            jar {
                manifest {
                    attributes 'Main-Class': 'com.radsoltan.EntryPoint'
                }
                from {
                    configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
                }
            }
        }
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    addExtraDependencies("javafx")
    jpackage {
        jpackageHome = 'C:/Program Files/Java/jdk-14.0.1'
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu']
        }
    }
    launcher {
        name = 'RC Section Designer'
    }
}

application {
    mainClassName = 'com.radsoltan/com.radsoltan.EntryPoint'
    group 'com.radsoltan'
    version '1.0.0'
}
